--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sign up</title>
-    <link rel="stylesheet" href="C:\Users\anish\OneDrive\Desktop\Code\signupnew.css">
+    <link rel="stylesheet" href="signupnew.css">
 </head>
 <body>
     <form action="action_page.php" style="border:1px solid #ccc">
